# assignment

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py
app/api/: company.py  exception_handlers.py  schemas.py
app/company/: dtos.py  exceptions.py  models.py  repository.py  usecase.py
app/core/: config.py  database.py  enums.py  exceptions.py
app/query/: dtos.py  repository.py  usecase.py
app/tag/: dtos.py  exception.py  exceptions.py  models.py  repository.py  usecase.py
tests/: conftest.py
tests/api/: test_api.py
tests/company/repository/: conftest.py  test_add_tag_on_company.py  test_create_company.py  test_delete_tag_of_company.py  test_get_companies_by_tag_id.py  test_get_company_by_name.py  test_search_companies_with_partial_name.py
tests/company/usecase/: conftest.py  test_add_tag_on_company.py  test_create_company.py  test_delete_tag_of_company.py  test_get_company_by_name.py  test_get_company_names_by_partial_name
tests/query/repository/: conftest.py  test_get_companies_by_tag_name.py  test_get_companies_info.py
tests/query/usecase/: conftest.py  test_get_companies_by_tag_name.py  test_get_companies_info.py
tests/tag/repository/: conftest.py  test_create_tags.py  test_get_tag_by_name.py
tests/tag/usecase/: conftest.py  test_create_tags.py  test_get_tag_by_name.py
